--- a/templates/searchResult.html
+++ b/templates/searchResult.html
@@ -5,7 +5,7 @@
 
 <section id="signup" class="signup-section">
     <div class="text-center">
-        <h3>Search for the Pet</h3>
+        <h3>Search for your Pet</h3>
     </div>
     
     <div class="container-fuid d-flex justify-content-center m-5">
@@ -26,7 +26,16 @@
         </div>
 
         <div class="container p-3 bg-light">
-      
+     
+            <!-- Display No Search Result. Prompt User to Search again-->
+            {% with messages = get_flashed_messages() %}
+              {% if messages %}
+                {% for message in messages %}
+                  {{ message }}
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
+            
             <!-- Display the search based on Pet Category  -->
             {% for num in pet %}
                 <div class="border p-4">
@@ -37,7 +46,6 @@
                             Gender:   <h5> {{num.gender}} </h5><br> 
                             Color:    <h5> {{num.color}} </h5><br> 
                             Age:      <h5> {{num.age}} </h5><br> 
-                            
                         </div>
                         
                         <div class='col-sm-12 col-md-7'>
