--- a/templates/my_adv.html
+++ b/templates/my_adv.html
@@ -8,21 +8,13 @@
     <div class="container bg-light pt-3 pb-3 mt-5">
 
         <!--Display the advertisment posted by user based on User ID-->
+        
         <form action="{{url_for('update_adv')}}" method="POST">
-            
-            
-            <!-- Display No Advertisement. Prompt User to add Advertisment-->
-            {% with messages = get_flashed_messages() %}
-                {% if messages %}
-                    {% for message in messages %}
-                      {{ message }}
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
             
             
             {% for num in pet%}
             <div class="border">
+                
                 <div>
                     <h3>My Advertisement<br></h3>
                 </div>
@@ -63,11 +55,29 @@
             <button type="submit" name="action" class="btn btn-primary mx-auto">Update Advertisement</button>
 
             <!--Button for user to go to Delete Advertisement page-->
-            <button type="button" onclick="window.location.href='{{url_for('delete_adv', adv_id=num._id)}}'" class="btn btn-primary mx-auto">Delete</button><br><br><br> {% endfor %}
-
+            <button type="button" onclick="window.location.href='{{url_for('delete_adv', adv_id=num._id)}}'" class="btn btn-primary mx-auto">Delete</button>
+            {% endfor %}
+            
+            <br><br>
+            <!-- Display Flash Message for User 
+                1) No Advertisement. Prompt User to add Advertisment
+                2) Advertisment update succesfully
+            -->
+            <strong>
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        {% for message in messages %}
+                          {{ message }}
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+            </strong>
         </form>
+        
 
     </div>
+    
 </section>
+<br><br>
 
 {% endblock %}
