amend advertisment layout

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,13 +36,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{{url_for('mysearch')}}">Home</a>
+            <a class="nav-link js-scroll-trigger font-weight-bold" href="{{url_for('mysearch')}}"><h4>Home</h4></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{{url_for('add_user')}}">Sign Up</a>
+            <a class="nav-link js-scroll-trigger font-weight-bold" href="{{url_for('add_user')}}"><h4>Sign Up</h4></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="{{url_for('login')}}">Log In</a>
+            <a class="nav-link js-scroll-trigger font-weight-bold" href="{{url_for('login')}}"><h4>Log In</h4></a>
           </li>
         </ul>
       </div>
