add button to go back to My Login

--- a/templates/base1.html
+++ b/templates/base1.html
@@ -39,7 +39,10 @@
             <a class="nav-link js-scroll-trigger font-weight-bold" href="{{url_for('mysearch')}}"><h4>Home</h4></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger font-weight-bold" href="{{url_for('mysearch')}}"><h4>Log Out</h4></a>
+            <a class="nav-link js-scroll-trigger font-weight-bold" href="{{url_for('add_user')}}"><h4>Sign Up</h4></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger font-weight-bold" href="{{url_for('login')}}"><h4>Log In</h4></a>
           </li>
         </ul>
       </div>
