amend the layout of the advtisement

--- a/templates/deleteAdv.html
+++ b/templates/deleteAdv.html
@@ -9,7 +9,7 @@
             <!--Form to confirm delete advertisment-->
             <form action="{{url_for('delete_adv2')}}" method="POST">
 
-                <!-- Hide the user ID to prevent user to amend it -->
+                <!-- Hide the adv ID to prevent user to amend it -->
                 <div class="d-none">
                     <input id="adv_id" name="adv_id" type="text" value={{adv_id}}><br>
                 </div>
