--- a/templates/deleteAdv.html
+++ b/templates/deleteAdv.html
@@ -6,30 +6,34 @@
     <section id="signup" class="signup-section">
         <div class="container d-flex justify-content-center p-3 mb-5">
             <h3>
-    
+                
                 <!--Form to confirm delete advertisment-->
                 <form action="{{url_for('delete_adv2')}}" method="POST">
+                    {% for num in mypet %}
     
-                    <!-- Hide the adv ID to prevent user to amend it -->
-                    <div class="d-none">
-                        <input id="adv_id" name="adv_id" type="text" value={{adv_id}}><br>
-                    </div>
-                 
-                    
-                    <div class="row justify-content-center">
-                        <!-- Button to delete the advertisment -->
-                        <div class = "m-2">
-                            <button type="submit" name="action" class="btn btn-primary mx-auto">Confirm Delete?</button>
+                        <!-- Hide the adv ID to prevent user to amend it -->
+                        <div class="d-none">
+                            <input id="adv_id" name="adv_id" type="text" value={{adv_id}}><br>
+                        </div>
+                         
+                        <div class="d-none">
+                            <input id="user_id" name="user_id" type="text" value={{num.user_id}}><br>
                         </div>
                         
-                        <!-- Button to cancel delete advertisment -->
-                        <div class = "m-2">
-                            {% for num in mypet %}
+                        <div class="row justify-content-center">
+                            <!-- Button to delete the advertisment -->
+                            <div class = "m-2">
+                                <button type="submit" name="action" class="btn btn-primary mx-auto">Confirm Delete?</button>
+                            </div>
+                            
+                            <!-- Button to cancel delete advertisment -->
+                            <div class = "m-2">
                                 <button type="button" onclick="window.location.href='{{url_for('my_adv', user_id=num.user_id)}}'" class="btn btn-primary mx-auto">No</button>
-                            {% endfor %}
+                            </div>
                         </div>
-                    </div>
+                    {% endfor %}
                 </form>
+                
             </h3>
         </div>
     </section>
